# complex_behaviors

./: CHANGELOG.rst  README.md
complex_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpswarm_sar/: CHANGELOG.rst  CMakeLists.txt  README.md  launch_hierarchy.drawio  package.xml
cpswarm_sar/launch/: deployment.launch  gazebo_1.launch  gazebo_2.launch  gazebo_3.launch  gazebo_4.launch  gazebo_8.launch  logging.launch  uav_abstraction_library.launch  uav_communication_library.launch  uav_fcu_apm.launch  uav_fcu_px4.launch  uav_hitl.launch  uav_sar_flocking.launch  uav_sar_optimal.launch  uav_sar_random.launch  uav_sitl.launch  uav_swarm_library.launch
cpswarm_sar/param/: rosconsole.config  uav_swarmros.cfg
cpswarm_sar/rviz/: rviz_1.rviz  rviz_2.rviz  rviz_3.rviz  rviz_4.rviz  rviz_8.rviz
cpswarm_sar/scripts/: proxy_client.py  uav_coverage_simulation.py  uav_sar_analysis.py  uav_sar_demonstration.py  uav_sar_simulation.py
cpswarm_storage/: CHANGELOG.rst  CMakeLists.txt  README.md  launch_hierarchy.drawio  package.xml
cpswarm_storage/launch/: abstraction_library.launch  communication_library.launch  scout.launch  stage.launch  worker.launch
cpswarm_storage/scripts/: scout_state_machine.py
cpswarm_storage/world/: empty.pgm  empty.world  empty.xcf  empty.yaml
sar/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sar/launch/: gazebo_1.launch  gazebo_1_pelican.launch  gazebo_2.launch  gazebo_3.launch  gazebo_4.launch  gazebo_4_idle_2.launch  gazebo_8.launch  px4.launch  (+22 more)
storage/: CHANGELOG.rst  CMakeLists.txt  README.md  TODO.txt  package.xml
(+67 files in other folders)
